--- a/index.html
+++ b/index.html
@@ -6,5 +6,39 @@
 
 		<title>Google</title>
 	</head>
-	<body></body>
+	<body>
+
+		<nav>
+			<ul>
+				<li><a href="#">About</a></li>
+				<li><a href="#">Store</a></li>
+				<li><a href="#">Gmail</a></li>
+				<li><a href="#">Images</a></li>
+				<li><a href="#">Options</a></li>
+				<li><a href="#">Notifications</a></li>
+				<li><a href="#">Account</a></li>
+			</ul>
+		</nav>
+
+		<div class="center">
+			<img src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png" alt="Google">
+		
+			<div style="position: relative;" class="search">
+				<input name="q" title="Search" type="text" placeholder="Search..." >
+			</div>
+		</div>
+
+		<div class="footer">
+			<ul>
+				<li><a href="#">Advertising</a></li>
+				<li><a href="#">Business</a></li>
+				<li><a href="#">Privacy</a></li>
+				<li><a href="#">Terms</a></li>
+				<li><a href="#">Settings</a></li>
+			</ul>
+		</div>
+
+	</body>
 </html>
+
+<!-- style="border:none;padding:0px;margin:0px;height:auto;width:100%;position:absolute;z-index:6;left:0px;outline:none;"
