--- a/index.html
+++ b/index.html
@@ -1,8 +1,13 @@
+<!DOCTYPE html>
+<!-- Written by Frederick Coleman January 2018-->
 <html lang="en">
 	<head>
+		<meta charset="UTF-8">
+    	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+    	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 		<link href = "https://www.google.com/images/branding/product/ico/googleg_lodp.ico" rel= "shortcut icon">
 
-		<link rel="stylesheet" href="default.css">
+		<link rel="stylesheet" href="default.css" type="text/css">
 
 		<title>Google</title>
 	</head>
@@ -29,12 +34,12 @@
 		</div>
 
 		<div class="footer">
-			<ul>
+			<ul style="background-color: lightgrey;">
 				<li><a href="#">Advertising</a></li>
 				<li><a href="#">Business</a></li>
-				<li><a href="#">Privacy</a></li>
-				<li><a href="#">Terms</a></li>
-				<li><a href="#">Settings</a></li>
+				<li style="float:right;"><a href="#">Privacy</a></li>
+				<li style="float:right;"><a href="#">Terms</a></li>
+				<li style="float:right;"><a href="#">Settings</a></li>
 			</ul>
 		</div>
 
