removed unneeded files

--- a/search.html
+++ b/search.html
@@ -9,12 +9,10 @@
    	<meta name="description" content="Search Results">
 	<link href = "https://www.google.com/images/branding/product/ico/googleg_lodp.ico" rel= "shortcut icon">
 
-	<title>Google - Search Results</title>
+	<title>create this page - Google Search</title>
 
-	<link href="css/search.css" rel="stylesheet">
-	<link href="css/bootstrap.css" rel="stylesheet">
-	<link href='http://fonts.googleapis.com/css?family=Average|Roboto:400,700' rel='stylesheet' type='text/css'>
-
+	<link href="css/default.css" rel="stylesheet">
+	
 </head>
 
 <body id="" class="">
